# LuizaLabs_Bootcamp

./: .gitignore  Hello-World.py  README.md  pyproject.toml
Desafios/: Desafio 3 - arquivos  README  desafio1.py  desafio1_otimizacao_funcoes_bancarias.py  desafio2_POO.py  desafio2_geradores_iteradores_decoradores.py  desafio_4 - arquivos.py  desafio_pacotes.py  funcoes_modularizadas_desafio1.py
Desafios/banco_dados_desafio4arq/: log.txt
Desafios/banco_dados_desafioarq/: log.txt
Materiais/: GitHub_Copilot_config.pptx  Todas as 40 Palavras Restritas do Python_By_Vitor_Melo.txt
Programas_testes/Banco de dados/: bootcamp_magalu.db  conexaodb.py
Programas_testes/Boas práticas em python/: Entendendo_funcoes_solucoes_digitais._pt2py.py  Entendendo_funcoes_solucoes_digitais.py
Programas_testes/Classes/: Classes_teste.py  Criando_seu_primeiro_programa_com_POO.py  Fundamentos de POO em soluções_pt1.py  Fundamentos de POO em soluções_pt2.py  heranca_multipla  heranças  metodos_classe_estatico  polimorfismo  properties
Programas_testes/Decoradores/: inner_functions.py  passando funcoes como parametros.py
Programas_testes/Fast_API/: api_cookie  arquivoteste.py  arquivoteste_api  pyproject.toml
Programas_testes/Geradores/: Gerador 1.py
Programas_testes/Manipulação de arquivos/: arquivo_Teste.txt  escrita de arquivos  manipulacao texto.py  novo_diretorio_python
Programas_testes/ambiente virtual/: boas_praticas  pyproject.toml
Programas_testes/github_copilot/: teste_1.py
Programas_testes/integration_sqlalchemy/: pyMongoAplicattion.py  (+1 more)
(+5 files in other folders)
