[project]
name = "bootcamp-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Yuken",email = "eaiyukenish4.0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "databases[aiosqlite] (>=0.9.0,<0.10.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
